fix line spacing

--- a/app.css
+++ b/app.css
@@ -249,7 +249,7 @@ button {
 .page-content .header {
     font-size: 26px;
     color: var(--main-color);
-    margin-top: 30px;
+    margin: 30px 0 15px;
 }
 
 .content-categories {
@@ -403,7 +403,8 @@ label .label-text:before {
 
 .node-children>.node {
     border-left: 1px solid #eee;
-    padding: 0 5px;
+    padding: 0 0 0 15px;
+    margin: 5px;
 }
 
 
